--- a/src/main/resources/com/example/orthoj/View/CalendrierMain.fxml
+++ b/src/main/resources/com/example/orthoj/View/CalendrierMain.fxml
@@ -1,32 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.CalendrierController">
+<AnchorPane prefHeight="810.0" prefWidth="1440.0" stylesheets="@../Style/menu.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.CalendrierController">
    <children>
-      <MenuButton layoutX="461.0" layoutY="36.0" mnemonicParsing="false" text="New RDV  ">
+      <MenuButton layoutX="1159.0" layoutY="76.0" mnemonicParsing="false" text="New RDV  ">
         <items>
           <MenuItem id="NewConsultation" mnemonicParsing="false" onAction="#NewConsultation" text="Consultation" />
           <MenuItem id="NewSuivi" mnemonicParsing="false" onAction="#NewSuivi" text="Suivi" />
             <MenuItem id="NewAtelier" mnemonicParsing="false" onAction="#NewAtelier" text="Atelier" />
         </items>
       </MenuButton>
-      <TableView fx:id="rendezvous" layoutX="93.0" layoutY="78.0" prefHeight="282.0" prefWidth="457.0">
+      <TableView fx:id="rendezvous" layoutX="561.0" layoutY="142.0" prefHeight="468.0" prefWidth="779.0" stylesheets="@../Style/button.css">
         <columns>
-          <TableColumn fx:id="date" prefWidth="75.0" text="Date" />
-          <TableColumn fx:id="heure" prefWidth="75.0" text="heure" />
-            <TableColumn fx:id="nom" prefWidth="75.0" text="nom" />
-            <TableColumn fx:id="prenom" prefWidth="75.0" text="prenom" />
-            <TableColumn fx:id="type" prefWidth="75.0" text="type" />
-            <TableColumn fx:id="online" prefWidth="75.0" text="online" />
+          <TableColumn fx:id="date" prefWidth="131.0" text="Date" />
+          <TableColumn fx:id="heure" prefWidth="116.0" text="heure" />
+            <TableColumn fx:id="nom" prefWidth="112.0" text="nom" />
+            <TableColumn fx:id="prenom" prefWidth="129.0" text="prenom" />
+            <TableColumn fx:id="type" prefWidth="105.0" text="type" />
+            <TableColumn fx:id="online" prefWidth="169.0" text="online" />
         </columns>
       </TableView>
-      <Button layoutX="495.0" layoutY="364.0" mnemonicParsing="false" onAction="#delete" text="delete" />
-      <Button layoutX="423.0" layoutY="364.0" mnemonicParsing="false" onAction="#start" text="start" />
+      <Button layoutX="1047.0" layoutY="645.0" mnemonicParsing="false" onAction="#delete" stylesheets="@../Style/button.css" text="delete" />
+      <Button layoutX="1198.0" layoutY="649.0" mnemonicParsing="false" onAction="#start" prefWidth="126.0" stylesheets="@../Style/button.css" text="start" />
+      <VBox alignment="CENTER" layoutX="-20.0" layoutY="-26.0" prefHeight="886.0" prefWidth="430.0" style="-fx-background-color: EDECF4;" stylesheets="@../Style/button.css">
+         <children>
+            <Label styleClass="title1" text="Ortho-J" />
+            <VBox alignment="CENTER" prefHeight="653.0" prefWidth="382.0" spacing="30.0">
+               <children>
+                  <Button fx:id="home" mnemonicParsing="false" onAction="#onHome" styleClass="menu-button" text="Home" />
+                  <Button fx:id="listePatients" mnemonicParsing="false" onAction="#onListePatients" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Patients" />
+                  <Button fx:id="calendrier" mnemonicParsing="false" onAction="#onCalendrier" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Calendrier" />
+                  <Button fx:id="questions" mnemonicParsing="false" onAction="#onQuestions" prefHeight="39.0" prefWidth="171.0" styleClass="menu-button" text=" Questionnaires" />
+                  <Button fx:id="anam" mnemonicParsing="false" onAction="#onAnam" prefHeight="39.0" prefWidth="211.0" styleClass="menu-button" text="Anamnèse questions" />
+                  <Button fx:id="disconnect" mnemonicParsing="false" onAction="#onDisconnect" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Déconnecter" />
+               </children>
+            </VBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
