--- a/src/main/resources/com/example/orthoj/View/anam_type_home.fxml
+++ b/src/main/resources/com/example/orthoj/View/anam_type_home.fxml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.AnamTypeHome">
+<AnchorPane prefHeight="810.0" prefWidth="1440.0" stylesheets="@../Style/button.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.AnamTypeHome">
    <children>
-      <HBox layoutX="222.0" layoutY="188.0" prefHeight="25.0" prefWidth="156.0" spacing="50.0">
+      <Button layoutX="1200.0" layoutY="723.0" mnemonicParsing="false" onAction="#onAnnuler" text="Annuler" />
+      <VBox alignment="CENTER" layoutX="9.0" layoutY="9.0" prefHeight="841.0" prefWidth="391.0" style="-fx-background-color: EDECF4;">
+         <children>
+            <Label styleClass="title1" text="Ortho-J" />
+            <VBox alignment="CENTER" prefHeight="653.0" prefWidth="382.0" spacing="30.0">
+               <children>
+                  <Button fx:id="home" mnemonicParsing="false" onAction="#onHome" styleClass="menu-button" text="Home" />
+                  <Button fx:id="listePatients" mnemonicParsing="false" onAction="#onListePatients" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Patients" />
+                  <Button fx:id="calendrier" mnemonicParsing="false" onAction="#onCalendrier" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Calendrier" />
+                  <Button fx:id="questions" mnemonicParsing="false" onAction="#onQuestions" prefHeight="39.0" prefWidth="171.0" styleClass="menu-button" text=" Questionnaires" />
+                  <Button fx:id="anam" mnemonicParsing="false" onAction="#onAnam" prefHeight="39.0" prefWidth="211.0" styleClass="menu-button" text="Anamnèse questions" />
+                  <Button fx:id="disconnect" mnemonicParsing="false" onAction="#onDisconnect" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Déconnecter" />
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+      <HBox layoutX="749.0" layoutY="400.0" prefHeight="46.0" prefWidth="273.0" spacing="50.0">
          <children>
             <Button fx:id="adulte" mnemonicParsing="false" onAction="#onAdulte" text="Adulte" />
             <Button fx:id="enfant" mnemonicParsing="false" onAction="#onEnfant" text="Enfant" />
          </children>
       </HBox>
-      <Button layoutX="502.0" layoutY="321.0" mnemonicParsing="false" onAction="#onAnnuler" text="Annuler" />
    </children>
 </AnchorPane>
