--- a/src/main/resources/com/example/orthoj/View/newconsultationview.fxml
+++ b/src/main/resources/com/example/orthoj/View/newconsultationview.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -11,40 +12,55 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.NewConsultationViewController">
+<AnchorPane prefHeight="810.0" prefWidth="1440.0" stylesheets="@../Style/button.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.NewConsultationViewController">
    <children>
-      <DatePicker id="Date" fx:id="date" layoutX="73.0" layoutY="218.0" prefHeight="26.0" prefWidth="150.0" promptText="Date" />
+      <DatePicker id="Date" fx:id="date" layoutX="514.0" layoutY="330.0" prefHeight="32.0" prefWidth="166.0" promptText="Date" />
       <VBox id="Vbox1" layoutX="74.0" layoutY="323.0" prefHeight="26.0" prefWidth="150.0" />
 
-      <Text layoutX="74.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nouvelle Consultation ">
+      <Text layoutX="514.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title1" text="Nouvelle Consultation ">
          <font>
-            <Font size="26.0" />
+            <Font size="41.0" />
          </font>
       </Text>
-      <Text layoutX="74.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Remplissez les champs suivant svp : " />
-      <TextField id="Nom" fx:id="nom" layoutX="74.0" layoutY="115.0" promptText="Nom" />
-      <TextField id="Prenom" fx:id="prenom" layoutX="247.0" layoutY="115.0" promptText="Prenom" />
-      <TextField id="Age" fx:id="age" layoutX="74.0" layoutY="168.0" promptText="Age" />
-      <TextField id="NumTel" fx:id="numTel" layoutX="247.0" layoutY="168.0" promptText="Numero de Tel" />
-      <HBox layoutX="74.0" layoutY="273.0" prefHeight="16.0" prefWidth="200.0" spacing="30.0">
-         <children>
-            <RadioButton fx:id="Adulte" mnemonicParsing="false" text="Adulte">
-               <toggleGroup>
-                  <ToggleGroup fx:id="grp1" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="Enfant" mnemonicParsing="false" text="Enfant" toggleGroup="$grp1" />
-         </children>
-      </HBox>
-      <Button id="ajouter" layoutX="430.0" layoutY="336.0" mnemonicParsing="false" onAction="#SaveNewConsultation" text="Ajouter" />
-      <TextField fx:id="heure" layoutX="248.0" layoutY="219.0" prefHeight="26.0" prefWidth="40.0" promptText="hr" />
-      <TextField fx:id="min" layoutX="300.0" layoutY="219.0" prefHeight="26.0" prefWidth="40.0" promptText="min" />
+      <Text layoutX="521.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Remplissez les champs suivant svp : ">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <TextField id="Nom" fx:id="nom" layoutX="514.0" layoutY="218.0" prefHeight="32.0" prefWidth="166.0" promptText="Nom" />
+      <TextField id="Prenom" fx:id="prenom" layoutX="720.0" layoutY="218.0" prefHeight="32.0" prefWidth="166.0" promptText="Prenom" />
+      <TextField id="Age" fx:id="age" layoutX="514.0" layoutY="270.0" prefHeight="32.0" prefWidth="166.0" promptText="Age" />
+      <TextField id="NumTel" fx:id="numTel" layoutX="720.0" layoutY="267.0" prefHeight="32.0" prefWidth="166.0" promptText="Numero de Tel" />
+      <HBox layoutX="74.0" layoutY="273.0" prefHeight="16.0" prefWidth="200.0" spacing="30.0" />
+      <Button id="ajouter" layoutX="803.0" layoutY="455.0" mnemonicParsing="false" onAction="#SaveNewConsultation" text="Ajouter" />
+      <TextField fx:id="heure" layoutX="737.0" layoutY="330.0" prefHeight="32.0" prefWidth="40.0" promptText="hr" />
+      <TextField fx:id="min" layoutX="794.0" layoutY="330.0" prefHeight="32.0" prefWidth="40.0" promptText="min" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Text layoutX="291.0" layoutY="238.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":">
+      <Text layoutX="782.0" layoutY="355.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":">
          <font>
-            <Font size="24.0" />
+            <Font size="29.0" />
          </font>
       </Text>
-      <Button fx:id="calendrier" layoutX="67.0" layoutY="337.0" mnemonicParsing="false" onAction="#BackToCalendrier" text="Calendrier" />
+      <Button fx:id="calendrier" layoutX="597.0" layoutY="455.0" mnemonicParsing="false" onAction="#BackToCalendrier" text="Calendrier" />
+      <RadioButton fx:id="Adulte" layoutX="519.0" layoutY="393.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="64.0" text="Adulte">
+         <toggleGroup>
+            <ToggleGroup fx:id="grp1" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="Enfant" layoutX="605.0" layoutY="393.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="71.0" text="Enfant" toggleGroup="$grp1" />
+      <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="850.0" prefWidth="400.0" style="-fx-background-color: EDECF4;">
+         <children>
+            <Label styleClass="title1" text="Ortho-J" />
+            <VBox alignment="CENTER" prefHeight="653.0" prefWidth="382.0" spacing="30.0">
+               <children>
+                  <Button fx:id="home" mnemonicParsing="false" onAction="#onHome" styleClass="menu-button" text="Home" />
+                  <Button fx:id="listePatients" mnemonicParsing="false" onAction="#onListePatients" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Patients" />
+                  <Button fx:id="calendrier1" mnemonicParsing="false" onAction="#onCalendrier" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Calendrier" />
+                  <Button fx:id="questions" mnemonicParsing="false" onAction="#onQuestions" prefHeight="39.0" prefWidth="171.0" styleClass="menu-button" text=" Questionnaires" />
+                  <Button fx:id="anam" mnemonicParsing="false" onAction="#onAnam" prefHeight="39.0" prefWidth="211.0" styleClass="menu-button" text="Anamnèse questions" />
+                  <Button fx:id="disconnect" mnemonicParsing="false" onAction="#onDisconnect" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Déconnecter" />
+               </children>
+            </VBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
