--- a/src/main/resources/com/example/orthoj/View/Dossiertable.fxml
+++ b/src/main/resources/com/example/orthoj/View/Dossiertable.fxml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.Dossiertable">
+<AnchorPane prefHeight="810.0" prefWidth="1440.0" stylesheets="@../Style/button.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.Dossiertable">
    <children>
-      <TableView fx:id="dossierTableView" layoutX="126.0" layoutY="59.0" prefHeight="282.0" prefWidth="391.0">
+      <TableView fx:id="dossierTableView" layoutX="606.0" layoutY="214.0" prefHeight="402.0" prefWidth="623.0">
          <columns>
-            <TableColumn fx:id="numdossier" prefWidth="75.0" text="Nº Dosseier" />
-            <TableColumn fx:id="nom" prefWidth="75.0" text="nom" />
-            <TableColumn fx:id="prenom" prefWidth="75.0" text="prenom" />
-            <TableColumn fx:id="age" prefWidth="75.0" text="Age" />
-            <TableColumn fx:id="type" prefWidth="75.0" text="type " />
+            <TableColumn fx:id="numdossier" prefWidth="112.0" text="Nº Dosseier" />
+            <TableColumn fx:id="nom" prefWidth="119.0" text="nom" />
+            <TableColumn fx:id="prenom" prefWidth="122.0" text="prenom" />
+            <TableColumn fx:id="age" prefWidth="125.0" text="Age" />
+            <TableColumn fx:id="type" prefWidth="144.0" text="type " />
          </columns>
       </TableView>
-      <Button fx:id="open" layoutX="498.0" layoutY="353.0" mnemonicParsing="false" onAction="#open" text="ouvrire" />
+      <Button fx:id="open" layoutX="1191.0" layoutY="723.0" mnemonicParsing="false" onAction="#open" text="ouvrire" />
+      <VBox alignment="CENTER" layoutX="1.0" layoutY="-4.0" prefHeight="874.0" prefWidth="419.0" style="-fx-background-color: EDECF4;">
+         <children>
+            <Label styleClass="title1" text="Ortho-J" />
+            <VBox alignment="CENTER" prefHeight="653.0" prefWidth="382.0" spacing="30.0">
+               <children>
+                  <Button fx:id="home" mnemonicParsing="false" onAction="#onHome" styleClass="menu-button" text="Home" />
+                  <Button fx:id="listePatients" mnemonicParsing="false" onAction="#onListePatients" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Patients" />
+                  <Button fx:id="calendrier" mnemonicParsing="false" onAction="#onCalendrier" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Calendrier" />
+                  <Button fx:id="questions" mnemonicParsing="false" onAction="#onQuestions" prefHeight="39.0" prefWidth="171.0" styleClass="menu-button" text=" Questionnaires" />
+                  <Button fx:id="anam" mnemonicParsing="false" onAction="#onAnam" prefHeight="39.0" prefWidth="211.0" styleClass="menu-button" text="Anamnèse questions" />
+                  <Button fx:id="disconnect" mnemonicParsing="false" onAction="#onDisconnect" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Déconnecter" />
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+      <Label layoutX="704.0" layoutY="93.0" styleClass="title1" text="Liste des patients" />
    </children>
 </AnchorPane>
